--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,10 @@
             <li>Técnico Superior en ADministración y Finanzas-IES García Pavón</li>
             <li>Licenciada en Ciencias Economicas y Empresariales-Universidad Petróleo Gases, Ploiesti, Rumania</li>
         </ul>
-    </h2></h>    
+    </h2>Historial laboral:</h>    
+        <ul>
+            <li>MERSA TOMELLOSO</li>
+        </ul>
     
     
 </body>
