mejorando la apariencia

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <meta property="og:image" content="img/imagen.jpg" />
 
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+RO:wght@100..400&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div>
     <h1>ANUTA BLEDEA</h1>
     <hr />
     <p>
@@ -142,6 +146,6 @@
       <li>Psicología</li>
       <li>Neurocíencia</li>
       <li>Nutrición</li>
-
+    </div>
   </body>
 </html>
