mejorando la apariencia

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playwrite+RO:wght@100..400&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div>
+    <div class="playwrite">
     <h1>ANUTA BLEDEA</h1>
     <hr />
     <p>
@@ -29,18 +29,19 @@
     </p>
     <h2>Formacion:</h2>
     <ul>
-      <li>
-        <strong>2023</strong> Soporte TI de Google:
-        <a
-          href="https://www.coursera.org/professional-certificates/google-it-support"
-          >Google IT Support Professional Certificate</a
-        >
-      </li>
+      
       <li>
         <strong>2024</strong> Automatizacion TI de Google con Python:
         <a
           href="https://www.coursera.org/professional-certificates/google-it-automation"
           >Google IT Automation with Python Professional Certificate</a
+        >
+      </li>
+      <li>
+        <strong>2023</strong> Soporte TI de Google:
+        <a
+          href="https://www.coursera.org/professional-certificates/google-it-support"
+          >Google IT Support Professional Certificate</a
         >
       </li>
       <li>
