--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <ul>
           <li>Contabilidad de clientes y proveedores</li>
           <li>
-            Utilización de softwear de administracion y contabiliidad -A3CON.
+            Utilización de softwear de administracion y contabilidad -A3CON.
           </li>
           <li>Realización de trámites en organismos públicos y privados.</li>
           <li>
