mejorar el estilo de la página principal

--- a/index.html
+++ b/index.html
@@ -1,152 +1,189 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Curriculum AB</title>
-    <!-- Meta etiquetas para SEO -->
-    <meta name="description" content="My first web page" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="description" content="Curriculum Vitae de Anuta Bledea" />
     <meta name="author" content="Anuta Bledea" />
-
-    <!-- Meta etiquetas para redes sociales -->
-    <meta property="og:title" content="My first web page" />
-    <meta property="og:description" content="My first web page" />
-    <meta property="og:image" content="img/imagen.jpg" />
-
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="playwrite">
-    <h1>ANUTA BLEDEA</h1>
-    <hr />
-    <p>
-      Tomelloso <strong>|</strong> Ciudad Real | Tlf.: 600755779 | email:
-      anabledea@hotmail.es
-    </p>
-    <h2>Formacion:</h2>
-    <ul>
-      
-      <li>
-        <strong>2024</strong> Automatizacion TI de Google con Python:
-        <a
-          href="https://www.coursera.org/professional-certificates/google-it-automation"
-          >Google IT Automation with Python Professional Certificate</a
-        >
-      </li>
-      <li>
-        <strong>2023</strong> Soporte TI de Google:
-        <a
-          href="https://www.coursera.org/professional-certificates/google-it-support"
-          >Google IT Support Professional Certificate</a
-        >
-      </li>
-      <li>
-        <strong>2012</strong> Técnico Superior en Administración y Finanzas-IES
-        García Pavón, Tomelloso, Ciudad Real
-      </li>
-      <li>
-        <strong>2005</strong> Licenciatura en Ciencias Economicas y
-        Empresariales-Universidad Pétroleo Gases, Ploiesti, Rumania, titulo
-        homologado al Grado Académico Español de Licenciada
-      </li>
-    </ul>
-    <h2>Historial laboral:</h2>
-    <ul>
-      <li>
-        <strong>11/2013-01/2014</strong>
-        <strong>Auxiliar administrativo contable</strong>
-        <strong>Mersa Investissement</strong> Tizi Ouzou, Argelia. <br />
-        Funciones:
-        <ul>
-          <li>Contabilidad de clientes y proveedores</li>
-          <li>
-            Utilización de softwear de administracion y contabilidad -A3CON.
-          </li>
-          <li>Realización de trámites en organismos públicos y privados.</li>
-          <li>
-            Emisión de registros de compras, ventas y demás transacciones.
-          </li>
-          <li>Gestión de remesas bancarias y pagos a proveedores.</li>
-          <li>Atención telefónica y presencial a clientes.</li>
+    <div class="cv-container">
+      <aside class="sidebar">
+        <div class="profile-pic"><img src="img/imagen.jpg" alt=/></div>
+        <h1>Anuta Bledea</h1>
+        <ul class="datos-personales">
+          <li><i class="fa fa-map-marker-alt"></i> Tomelloso, Ciudad Real</li>
+          <li><i class="fa fa-phone"></i> 600755779</li>
+          <li><i class="fa fa-envelope"></i> anabledea@hotmail.es</li>
         </ul>
-      </li>
-
-      <li>
-        <strong>08/2012-11/2012</strong>
-        <strong>Auxiliar administrativo contable</strong>
-        <strong>Mersa</strong>, Tomelloso, Ciudad Real. <br />
-        Funciones:
+        <hr />
+        <h2><i class="fa fa-user-friends"></i> Habilidades blandas</h2>
         <ul>
-          <li>Organización, escaneo y archivo de documentación.</li>
-          <li>Elaboraión, organización y registro de facturas.</li>
-          <li>
-            Asistencia en las tareas diarias de administración y contabiliidad.
-          </li>
-          <li>
-            Utilización de softwear de administación y contabilidad A3CON.
-          </li>
-          <li>Revisión de ingresos de caja y conciliación de cuentas.</li>
+          <li>Trabajo en equipo</li>
+          <li>Resolución de problemas</li>
+          <li>Comunicación efectiva</li>
+          <li>Adaptabilidad</li>
+          <li>Aprendizaje continuo</li>
         </ul>
-      </li>
-
-      <li>
-        <strong>03/1991-01/2006</strong>
-        <strong>Auxiliar contable</strong>
-        <strong>Open, SRL</strong>,Sighetu-Marmatiei, Maramures, Rumania.<br />
-        Funciones:
+        <h2><i class="fa fa-laptop-code"></i> Habilidades técnicas</h2>
         <ul>
-          <li>Contabilidad de clientes y proveedores</li>
-          <li>Gestión de tesorería</li>
-
-          <li>Contabilidad de IVA e IRPF</li>
-          <li>Contabilidad de nóminas y seguros sociales</li>
-          <li>Contabilidad de amortizaciones y activos fijos</li>
-          <li>Contabilidad de cierre, balances y cuentas anuales</li>
+          <li>Python, Java, JavaScript</li>
+          <li>HTML, CSS, Bootstrap</li>
+          <li>Git y GitHub</li>
+          <li>Bases de datos SQL</li>
+          <li>Automatización de tareas</li>
         </ul>
-      </li>
-    </ul>
-
-    <h2>Idiomas</h2>
-    <table>
-      <tr>
-        <th rowspan="2">IDIOMA</th>
-        <th colspan="2">Comprensión de idioma</th>
-        <th colspan="2">Expresión en el idioma</th>
-      </tr>
-      <tr>
-        <th>Escrita</th>
-        <th>Oral</th>
-        <th>Escrita</th>
-        <th>Oral</th>
-      </tr>
-
-      <tr>
-        <td>Inglés</td>
-        <td>B2</td>
-        <td>B2</td>
-        <td>B2</td>
-        <td>B2</td>
-      </tr>
-      <tr>
-        <td>Francés</td>
-        <td>A2</td>
-        <td>A2</td>
-        <td>A2</td>
-        <td>A2</td>
-      </tr>
-    </table>
-    <h2>Intereses</h2>
-    <ul>
-      <li>Ciencias de la computación</li>
-      <li>Física Cuántica</li>
-      <li>Yoga</li>
-      <li>Psicología</li>
-      <li>Neurocíencia</li>
-      <li>Nutrición</li>
+        <h2><i class="fa fa-language"></i> Idiomas</h2>
+        <ul>
+          <li>Inglés: Intermedio</li>
+          <li>Francés: Básico</li>
+        </ul>
+      </aside>
+      <main class="main-content">
+        <section class="perfil">
+          <h2><i class="fa fa-user"></i> Perfil profesional</h2>
+          <p>
+            Desarrolladora junior con formación en programación de sistemas
+            informáticos y automatización TI. Apasionada por la tecnología, con
+            experiencia en Python, HTML, CSS y JavaScript. Busco mi primera
+            oportunidad profesional en desarrollo para seguir aprendiendo y
+            aportar valor.
+          </p>
+        </section>
+        <section>
+          <h2><i class="fa fa-folder-open"></i> Proyectos</h2>
+          <ul>
+            <li>
+              <strong>Gestor de tareas en Python</strong> – Aplicación de
+              consola para organizar tareas personales.
+              <a
+                href="https://github.com/tuusuario/gestor-tareas"
+                target="_blank"
+                ><i class="fab fa-github"></i> Ver en GitHub</a
+              >
+            </li>
+            <li>
+              <strong>Web personal</strong> – Página web desarrollada con HTML y
+              CSS para mostrar mi portfolio.
+              <a
+                href="https://github.com/tuusuario/web-personal"
+                target="_blank"
+                ><i class="fab fa-github"></i> Ver en GitHub</a
+              >
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h2><i class="fa fa-graduation-cap"></i> Formación</h2>
+          <ul>
+            <li>
+              <strong>2025</strong> Programación de Sistemas Informáticos,
+              Centro de Estudios CEAT, Tomelloso, Ciudad Real
+            </li>
+            <li>
+              <strong>2024</strong> Automatización TI de Google con Python:
+              <a
+                href="https://www.coursera.org/professional-certificates/google-it-automation"
+                target="_blank"
+                >Google IT Automation with Python Professional Certificate</a
+              >
+            </li>
+            <li>
+              <strong>2023</strong> Soporte TI de Google:
+              <a
+                href="https://www.coursera.org/professional-certificates/google-it-support"
+                target="_blank"
+                >Google IT Support Professional Certificate</a
+              >
+            </li>
+            <li>
+              <strong>2012</strong> Técnico Superior en Administración y
+              Finanzas - IES García Pavón, Tomelloso, Ciudad Real
+            </li>
+            <li>
+              <strong>2005</strong> Licenciatura en Ciencias Económicas y
+              Empresariales - Universidad Pétroleo Gases, Ploiesti, Rumania
+              (homologado al Grado Académico Español de Licenciada)
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h2><i class="fa fa-briefcase"></i> Historial laboral</h2>
+          <ul>
+            <li>
+              <strong>11/2013-01/2014</strong> <br />
+              <strong>Auxiliar administrativo contable</strong> <br />
+              <strong>Mersa Investissement</strong>, Tizi Ouzou, Argelia.
+              <ul>
+                <li>Contabilidad de clientes y proveedores</li>
+                <li>
+                  Utilización de software de administración y contabilidad -
+                  A3CON
+                </li>
+                <li>
+                  Realización de trámites en organismos públicos y privados
+                </li>
+                <li>
+                  Emisión de registros de compras, ventas y demás transacciones
+                </li>
+                <li>Gestión de remesas bancarias y pagos a proveedores</li>
+                <li>Atención telefónica y presencial a clientes</li>
+              </ul>
+            </li>
+            <li>
+              <strong>08/2012-11/2012</strong> <br />
+              <strong>Auxiliar administrativo contable</strong> <br />
+              <strong>Mersa</strong>, Tomelloso, Ciudad Real.
+              <ul>
+                <li>Organización, escaneo y archivo de documentación</li>
+                <li>Elaboración, organización y registro de facturas</li>
+                <li>
+                  Asistencia en las tareas diarias de administración y
+                  contabilidad
+                </li>
+                <li>
+                  Utilización de software de administración y contabilidad A3CON
+                </li>
+                <li>Revisión de ingresos de caja y conciliación de cuentas</li>
+              </ul>
+            </li>
+            <li>
+              <strong>03/1991-01/2006</strong> <br />
+              <strong>Auxiliar contable</strong> <br />
+              <strong>Open, SRL</strong>, Sighetu-Marmatiei, Maramures, Rumania.
+              <ul>
+                <li>Contabilidad de clientes y proveedores</li>
+                <li>Gestión de tesorería</li>
+                <li>Contabilidad de IVA e IRPF</li>
+                <li>Contabilidad de nóminas y seguros sociales</li>
+                <li>Contabilidad de amortizaciones y activos fijos</li>
+                <li>Contabilidad de cierre, balances y cuentas anuales</li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h2><i class="fa fa-heart"></i> Intereses</h2>
+          <ul class="intereses">
+            <li>Ciencias de la computación</li>
+            <li>Física Cuántica</li>
+            <li>Yoga</li>
+            <li>Psicología</li>
+            <li>Neurociencia</li>
+            <li>Nutrición</li>
+          </ul>
+        </section>
+      </main>
     </div>
   </body>
 </html>
