--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           <p>
             Desarrolladora junior con formación en programación de sistemas
             informáticos y automatización TI. Apasionada por la tecnología, con
-            experiencia en Python, HTML, CSS y JavaScript. Busco mi primera
-            oportunidad profesional en desarrollo para seguir aprendiendo y
-            aportar valor.
+            experiencia en Java, Python, HTML, CSS y JavaScript. Busco mi
+            primera oportunidad profesional en desarrollo para seguir
+            aprendiendo y aportar valor.
           </p>
         </section>
         <section>
